FIXING BEHIND ERRORS

--- a/src/pages/pagedesigns/css/buttons.css
+++ b/src/pages/pagedesigns/css/buttons.css
@@ -18,3 +18,6 @@ td.details-control4{
     color:orange;
     cursor: pointer;
 }
+.hide_column {
+    display : none;
+}
